# social-influence

./: pyproject.toml
social_influence/experiments/annotators_competences/: README.md  analysis_notebook.ipynb  analysis_summary.csv  annotated_results_full.csv  annotated_results_with_analysis.csv  annotators_competences.py  intention_analysis.csv  intention_prompt.j2  intention_user_prompt.j2  reaction_analysis.csv  reaction_prompt.j2  zbior_30_AB_do_porownania.xlsx
