[project]
name = "social-influence"
version = "0.1.0"
description = ""
authors = [
    {name = "Ola Sawczuk",email = "zgv5tb99wn@privaterelay.appleid.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai (>=2.14.0,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "jinja2 (>=3.1.5,<4.0.0)",
    "openpyxl (>=3.1.0,<4.0.0)",
    "matplotlib (>=3.9.0,<4.0.0)",
    "seaborn (>=0.13.0,<1.0.0)",
    "scipy (>=1.14.0,<2.0.0)",
    "jupyter (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
